fixed hero on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1550,11 +1550,12 @@ body.no-scroll {
     .hero__CTA {
         width: 100%;
         max-width: 100%;
-        position: relative;
-        bottom: auto;
-        left: auto;
         padding: 20px 0;
-        margin-top: auto;
+        justify-content: center;
+        align-items: center;
+        margin: auto auto 180px;
+        gap: 50px;
+
     }
 
     .hero__text {
@@ -1587,7 +1588,7 @@ body.no-scroll {
     }
 
     .hero__buttons {
-        flex-direction: row;
+        flex-direction: column;
         width: 100%;
         max-width: 300px;
         height: auto;
@@ -1839,7 +1840,8 @@ body.no-scroll {
     .hero__CTA {
         padding: 15px 15px 20px;
         gap: 15px;
-        margin-bottom: 60px;
+        flex-direction: column;
+        justify-content: center;
     }
 
     .hero__title {
@@ -1858,6 +1860,7 @@ body.no-scroll {
 
     .hero__buttons {
         max-width: 250px;
+        flex-direction: row;
     }
 
     .btn {
